# lv_port_pc_vscode_aic-eec

./: .gitignore  CMakeLists.txt  README.md  build.sh  lv_conf.h
patches/: fix-thorvg-windows.patch
src/: example_selector.h  main.c  sim_main.c
src/aic-eec/: README.md  README_TH.md  aic-eec.c  aic-eec.h  aic_event.c  aic_event.h  aic_layout.h  aic_log.c  aic_log.h  gpio.c  gpio.h  sensors.c  sensors.h  tilt.c
src/episodes/health_ui/: health_data_bridge.c  health_data_bridge.h  health_data_provider.h  lv_port_disp.h  main_example.c
src/episodes/health_ui/ui/health/: health_layout_shell.c  health_layout_shell.h  health_ui_data_adapter.h  health_ui_display_policy.h  health_ui_root.c  health_ui_root.h  metric_detail_catalog.c  metric_detail_catalog.h
src/episodes/health_ui/ui/health/components/content/: comp_bp_metric_summary_card.c  comp_bp_metric_summary_card.h  comp_device_card.h  comp_pager_dots.c  comp_pager_dots.h  comp_section_header.h  comp_status_chip.c  comp_user_card.h
src/episodes/health_ui/ui/health/components/global/: comp_overlay_manager.h  comp_system_status_bar.c  comp_system_status_bar.h
src/episodes/health_ui/ui/health/components/header/: comp_tab_menu.c  comp_tab_menu.h
src/episodes/health_ui/ui/health/components/overlay/: comp_add_device_flow_modal.c  comp_add_device_list_item.c  comp_add_device_list_modal.c  comp_add_device_step_indicator.c  comp_add_device_step_modal.c
src/episodes/health_ui/ui/health/layout/: layout_debug_zone.h  layout_fonts.h  layout_i18n.c  layout_i18n.h  layout_i18n_en.inc  layout_i18n_th.inc  layout_scaffold.h
src/episodes/health_ui/ui/health/pages/dashboard/: metric_detail_structure.md  page_dashboard_main.c  page_dashboard_main.h  page_home_main.c  page_metric_bp_detail_layout.h  page_metric_detail_layout.c  page_metric_detail_layout.h  page_metric_single_detail_layout.c  page_metric_single_detail_layout.h  page_metric_sleep_detail_layout.h  page_settings_layout.h  page_user_detail_layout.c  page_user_detail_layout.h
src/episodes/health_ui/ui/health/sim/: health_ui_sim_data.c
src/episodes/hmi_ep06_wifi_profile_nvm/wifi_profile/: wifi_profile_store.c
src/episodes/hmi_ep07_final_wifi_manager/wifi_conn/: ui_wifi_status_page.c  wifi_connection_service.c
src/episodes/hmi_ep07_final_wifi_manager/wifi_list/: wifi_scan_service.c
src/episodes/int_ep06_digital_mic_probe/: main_example.c
src/episodes/int_ep06_digital_mic_probe/app_audio/pdm/: pdm_probe_logger.c
src/episodes/int_ep06_digital_mic_probe/app_ui/mic/: mic_presenter.c
src/episodes/int_ep07_sensorhub_final/app_audio/pdm/: pdm_mic.c
src/fonts/: lv_font_noto_thai_14.c  lv_font_noto_thai_16.c  lv_font_noto_thai_20.c  lv_font_noto_thai_24.c  lv_font_noto_thai_28.c  lv_fonts_thai.h
src/iot-health-gateway/: health_data_provider.h  main_example.c
src/iot-health-gateway/ui/health/: health_ui_data_adapter.c  health_ui_root.c  health_ui_root.h  metric_detail_catalog.c  metric_detail_catalog.h
src/iot-health-gateway/ui/health/components/content/: comp_device_card.c  comp_device_card.h  comp_section_header.c  comp_status_chip.h  comp_user_card.c
src/iot-health-gateway/ui/health/components/global/: comp_overlay_manager.c  comp_system_status_bar.c
src/iot-health-gateway/ui/health/components/header/: comp_header_back.c  comp_header_back.h  comp_header_dashboard.c  comp_header_dashboard.h
src/iot-health-gateway/ui/health/components/overlay/: comp_add_device_flow_modal.c  comp_add_device_flow_modal.h  comp_add_device_list_item.h  comp_add_device_list_modal.c  comp_add_device_list_modal.h  comp_add_device_step_indicator.h  comp_add_device_step_modal.h
src/iot-health-gateway/ui/health/layout/: layout_debug_zone.c  layout_fonts.h  layout_scaffold.c  layout_tokens.h
src/iot-health-gateway/ui/health/pages/dashboard/: page_dashboard_main.c  page_home_main.h  page_metric_bp_detail_layout.c  page_metric_sleep_detail_layout.c  page_settings_layout.c  page_user_detail_layout.h
src/iot-health-gateway/ui/health/pages/pre_auth/: page_pre_auth_overview.c  page_pre_auth_overview.h
src/iot-health-gateway/ui/health/sim/: health_ui_sim_data.c  health_ui_sim_data.h
src/part1/: part1_examples.c  part1_examples.h
src/part2/: part2_examples.c  part2_examples.h
src/part3/: part3_examples.c  part3_examples.h  part3_scope_example.c  part3_scope_example.h
src/part4/: part4_examples.h  part4_sim_examples.c
src/part5/: part5_examples.h  part5_sim_examples.c
src/tesaiot/: FreeRTOS.h  app_interface.h  app_logo_stub.c  cy_pdl.h  cy_result.h  cybsp.h  game_common.c  mtb_bmi270.h  mtb_bmm350.h  mtb_hal.h  mtb_sht4x.h  pse84_common.h  sensor_bus.c  sensor_bus.h  tesaiot_thai.h  usb_hid_joystick.h  xensiv_dps3xx.h  xensiv_dps3xx_mtb.h
src/tesaiot/mock_sensors/bmi270/: bmi270_reader.h  bmi270_types.h  mock_bmi270_reader.c
src/tesaiot/mock_sensors/bmm350/: bmm350_reader.h  mock_bmm350_reader.c
src/tesaiot/mock_sensors/dps368/: dps368_reader.h  dps368_types.h  mock_dps368_reader.c
src/tesaiot/mock_sensors/sht4x/: mock_sht4x_reader.c  sht4x_reader.h
